salesforce/force-app/main/default/objects/Education_History__c/Education_History__c.object-meta.xml
<CustomObject>
    <description>Credentialing POC — Education History</description>
    <label>Education History</label>
    <pluralLabel>Education Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <nameField>
        <displayFormat>EDU-{00000}</displayFormat>
        <label>Education History Name</label>
        <type>AutoNumber</type>
    </nameField>
</CustomObject>