salesforce/force-app/main/default/objects/Education_History__c/fields/Degree_Type__c.field-meta.xml
<CustomField>
    <fullName>Degree_Type__c</fullName>
    <label>Degree Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
        <value>
            <fullName>MD</fullName>
        </value>
        <value>
            <fullName>DO</fullName>
        </value>
        <value>
            <fullName>MBBS</fullName>
        </value>
        <value>
            <fullName>PhD</fullName>
        </value>
        <value>
            <fullName>Masters</fullName>
        </value>
        <value>
            <fullName>Bachelors</fullName>
        </value>
        <value>
            <fullName>Residency</fullName>
        </value>
        <value>
            <fullName>Fellowship</fullName>
        </value>
        <value>
            <fullName>Internship</fullName>
        </value>
        <value>
            <fullName>Other</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>