salesforce/force-app/main/default/objects/Education_History__c/fields/Field_Of_Study__c.field-meta.xml
<CustomField>
    <fullName>Field_Of_Study__c</fullName>
    <label>Field of Study</label>
    <length>255</length>
    <type>Text</type>
</CustomField>