salesforce/force-app/main/default/objects/Education_History__c/fields/Graduation_Year__c.field-meta.xml
<CustomField>
    <fullName>Graduation_Year__c</fullName>
    <label>Graduation Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>