salesforce/force-app/main/default/objects/Education_History__c/fields/Institution_Name__c.field-meta.xml
<CustomField>
    <fullName>Institution_Name__c</fullName>
    <label>Institution Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>